// Simple file used to test that we can use both optional and non-optional fields
// in proto3, and that the optional field is represented as a Swift Optional.
// This is a simple test case that does not use any imports, so it should not
// generate any imports in the Swift file, and should not require any special
// handling in the compiler plugin.
//
syntax = "proto3";

package swift_proto_testing.proto3;

message SimpleOptional {
  string non_optional = 1;
  optional string optional = 2;

  message NestedMessage {
    string nested_non_optional = 1;
    optional string nested_optional = 2;
  }

  NestedMessage nested_message = 3;
  optional NestedMessage optional_nested_message = 4;
}
